@@ -24,6 +24,7 @@ REQUIREMENTS
 	pyfits >= 3.1
 	pyephem >= 3.7.5
 	aipy >= 0.9.1
+	pytz >= 2011k
 	*matplotlib >= 0.98.3
 	(* required for some of the scripts)
 
