@@ -502,9 +502,9 @@ class TSFITS(object):
 			except:
 				if frame.getFilterCode() is not None:
 					self.hdulist[0].header.update('FILTER', frame.getFilterCode())
-				if frame.header.gain is not None:
+				if getattr(frame.header, 'gain', None) is not None:
 					self.hdulist[0].header.update('GAIN', frame.header.gain)
-				if frame.header.tuningWord is not None:
+				if getattr(frame.header, 'tuningWord', None) is not None:
 					self.hdulist[0].header.update('FREQ', frame.getCentralFreq())
 				self.flush()
 
