@@ -27,6 +27,9 @@
   * Added a new overlay module for images called lsl.imaging.overlay
   * Fixed several bugs in lsl.sim.vis and lsl.imaging.utils related to single-channel data sets
   * Added an option to export the images created to imageIDI.py to a FITS image file
+  * Small bugfix to the lsl.writer.tsfits module with regards to processing DRX frames
+  * Cleaned up the setup.py script to uses NumPy's internal facilities to identify ATLAS
+  * Updated the list of dependencies to include pytz
 
 1.0.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
